IntelliJ suggestions